--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
-  "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": [
-        "./*"
+      "@App/*": [
+        "./app/*"
+      ],
+      "@assets/*": [
+        "./assets/images/*"
       ]
     }
   },
@@ -13,5 +15,6 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ]
+, "app/(tabs)/(about)/about.jsx"  ],
+  "extends": "expo/tsconfig.base"
 }
