--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^7.0.14",
     "coffee": "file:",
     "expo": "~52.0.37",
+    "expo-asset": "~11.0.4",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
@@ -32,7 +33,7 @@
     "expo-system-ui": "~4.0.8",
     "expo-video": "~2.0.5",
     "expo-web-browser": "~14.0.2",
-    "lottie-react-native": "^7.2.2",
+    "firebase": "^11.4.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
@@ -45,8 +46,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-asset": "~11.0.4"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
